feat(ssl): manage multiple certificates
